export enum EstadoVehiculo {
    DISPONIBLE = "Disponible",
    EN_ALQUILER = "En Alquiler",
    EN_MANTENIMIENTO = "En Mantenimiento",
    NECESITA_LIMPIEZA = "Necesita Limpieza"
}