@startuml

title DriveHub - Diagrama de clases

' Enumeracion de estado vehiculo
enum EstadoVehiculo {
    DISPONIBLE
    EN_ALQUILER
    EN_MANTENIMIENTO
    NECESITA_LIMPIEZA
}
' Cambiar el EstadoVehiculo por una interfaz IEstadoVehiculo
' Y utilizar el PATRÓN DE DISEÑO - STATE
interface IEstadoVehiculo {
    + getNombre(): string
    + reservar(vehiculo: Vehiculo): void
    + devolver(vehiculo: Vehiculo): void
    + puedeReservar(): boolean
    + enviarAMantenimineto(vehiculo: Vehiculo): void
    + completarMantenimiento(vehiculo: Vehiculo): void
}

class EstadoDisponible {}
class EstadoEnMantenimiento {}
class EstadoEnAlquiler {}

abstract class Vehiculo {
    - matricula: string
    - estado: EstadoVehiculo
    - kilometraje: number
    - mantenimientos: Array<Mantenimiento>

    'Disparadores de Mantenimiento
    - kmDesdeUltimoMantenimiento: number
    - fechaUltimoMantenimiento: Date
    - alquileresDesdeUltimoMantenimiento: number
    
    constructor(matricula: string, kilometraje: number)
    + getMantenimientos(): Mantenimiento[]

    + agregarMantenimiento(mantenimiento: Mantenimiento): void
    + necesitaMantenimiento(): boolean
    + resetearContadoresMantenimiento(): void
    + setEstado(nuevoEstado: EstadoVehiculo): void
    + reservar(): void
    + devolver(kilometros: number): void
    + estaDisponible(): boolean

    + {abstract} getTarifaBase(): number
    # {abstract} calcularTarifa(dias: number, kmRecorridos: number): number
}

class Compacto {
    - {static} TARIFA_BASE_DIA: number = 30
    - {static} CARGO_KM: number = 0.15
    - {static} KM_LIMITE_DIARIO: number = 100 

    + getTarifaBase(): number
    + calcularTarifa(dias: number, kmRecorridos: number): number        
}

class Sedan {
    - {static} TARIFA_BASE_DIA: number = 50
    - {static} CARGO_KM: number = 0.20

    + getTarifaBase(): number
    + calcularTarifa(dias: number, kmRecorridos: number): number
}


class SUV {
    - {static} TARIFA_BASE_DIA: number = 80
    - {static} CARGO_SEGURO_DIA: number = 15
    - {static} CARGO_KM: number = 0.25
    - {static} KM_LIMITE_TOTAL: number = 500

    + getTarifaBase(): number
    + calcularTarifa(dias: number, kmRecorridos: number): number
}

class Cliente {
    - idCliente: number
    - nombre: string
    - reservas: Reserva []

    -- getters y setters --
    + getReservas(): Array<Reserva>
    + agregarReserva(reserva: Reserva): void //opc.1
    + crearReserva(vehiculo: Vehiculo, fechaInicio: Date, fechaFin: Date): Reserva //opc.2
}

class Reserva {
    - idReserva: number
    - cliente: Cliente
    - vehiculo: Vehiculo
    - fechaDeInicio: Date
    - fechaDeFin: Date
    - kilometrosRecoridos: number
    - costoTotal: number

    -- getters y setters --
    + calcularDias(): number
    + calcularCostoTotal(): void
    + iniciarAlquiler(kilometrajeInicial: number): void
    + finalizarAlquiler(kilometrajeFinal: number): void
}

class Mantenimiento {
    - idMantenimiento: number;
    - fecha: Date;
    - costo: number;
    - descripcion: string;
    
    constructor(fecha: Date, costo: number, descripcion: string)
    -- getters y setters --
    + obtenerDetalles(): void
}

class Plataforma {
    - vehiculos: Vehiculo[]
    - reservas: Reserva[]
    - clientes: Cliente[]

    -- getters y setters --

    + agregarVehiculo(vehiculo: Vehiculo): void
    + buscarVehiculo(matricula: string): Vehiculo
    + agregarCliente(cliente: Cliente): void
    + getVehiculosDisponibles(): Vehiculo[]
    + validarDisponibilidad(vehiculo: Vehiculo, fechaInicio: Date, fechaFin: Date): boolean
    + crearReserva(idCliente: number, matricula: string, fechaInicio: Date, fechaFin: Date): Reserva
    + registrarMantenimiento(vehiculo: Vehiculo, mantenimiento: Mantenimiento): void
}

' Relaciones de herencia
Vehiculo <|-- Compacto
Vehiculo <|-- Sedan
Vehiculo <|-- SUV

' Relaciones de composición
Vehiculo *-- Mantenimiento
Cliente *-- Reserva
Plataforma *-- Vehiculo
Plataforma *-- Cliente
Plataforma *-- Reserva


Vehiculo o--> IEstadoVehiculo
IEstadoVehiculo <|.. EstadoEnMantenimiento
IEstadoVehiculo <|.. EstadoEnAlquiler
IEstadoVehiculo <|.. EstadoDisponible

@enduml